# Operating-System-Project-2

./: .gitignore  Makefile  README.md  lldb_out.txt  lldb_script.txt  run_lldb.sh
.agent/workflows/: push.md
src/: AppDelegate.mm
src/BLUETOOTH/: BluetoothDriver.h  BluetoothDriver.mm  BluetoothHCI.h  BluetoothHCI.mm  BluetoothTypes.h  BluetoothTypes.mm
src/USB/: USBDriver.h  USBDriver.mm  USBTypes.h  USBTypes.mm
src/WIFI/: WiFi80211.h  WiFi80211.mm  WiFiConnection.h  WiFiConnection.mm  WiFiDriver.h  WiFiDriver.mm  WiFiHAL.h  WiFiHAL.mm  WiFiScanner.h  WiFiScanner.mm  WiFiTypes.h  WiFiTypes.mm
src/helpers/: GlassmorphismHelper.h  GlassmorphismHelper.mm  WindowChromeHelper.h  WindowChromeHelper.mm
src/services/: AdvancedKernel.h  AdvancedKernel_Core.mm  AdvancedKernel_Memory.mm  AdvancedKernel_Scheduler.mm  CPUArchitectureManager.h  CPUArchitectureManager.mm  CrossPlatformCommandEngine.h  CrossPlatformCommandEngine_ArchiveCommands.mm  CrossPlatformCommandEngine_BuiltIn.mm  CrossPlatformCommandEngine_Core.mm  CrossPlatformCommandEngine_DevCommands.mm  CrossPlatformCommandEngine_FileCommands.mm  CrossPlatformCommandEngine_MiscCommands.mm  CrossPlatformCommandEngine_NetworkCommands.mm  DriverManager.h  DriverManager.mm  (+30 more)
windows/: CMakeLists.txt  README.md
windows/src/: App.cpp  App.h  main.cpp
windows/src/views/: DesktopView.cpp  DesktopView.h  DockView.cpp  DockView.h  MenuBarView.cpp  MenuBarView.h
windows/src/windows/: BaseWindow.cpp  BaseWindow.h  FinderWindow.cpp  FinderWindow.h  SettingsWindow.cpp  SettingsWindow.h  TerminalWindow.cpp  TerminalWindow.h
(+49 files in other folders)
